--- a/EmpInfo/Views/Admin/AdminIndex.cshtml
+++ b/EmpInfo/Views/Admin/AdminIndex.cshtml
@@ -60,7 +60,7 @@
             }
             @if (auts.IndexOf("departmentManagement") >= 0) {
                 <div class="col-xs-4 col-sm-3 col-md-2">
-                    <a href="#">
+                    <a href="@Url.Content("~/Admin/Department")">
                         <img src="@Url.Content("~/Content/images/agency_48.png")" alt="agency" class="center-block" />
                         <p class="text-center">组织机构</p>
                     </a>
