--- a/EmpInfo/Views/Apply/DormRepairIndex.cshtml
+++ b/EmpInfo/Views/Apply/DormRepairIndex.cshtml
@@ -186,7 +186,7 @@
         <ol class="breadcrumb" style="margin:0;padding:0; background-color:transparent;">
             <li><span class="glyphicon glyphicon-hand-right"></span></li>
             <li><a href="@Url.Content("~/Home/Index")">主页</a></li>            
-            <li><a href="@Url.Content("~/Home/DormGroupIndex")">宿舍事务集合</a></li>
+            <li><a href="@Url.Content("~/Home/DormGroupIndex")">后勤事务</a></li>
             <li class="active">宿舍维修申请</li>
         </ol>
     </div>
