--- a/EmpInfo/Views/WX/WLogin.cshtml
+++ b/EmpInfo/Views/WX/WLogin.cshtml
@@ -123,11 +123,11 @@
             });
 
             $("#paramSetQuestion").on("click", function () {
-                var content = "<p class='small' style='margin:6px 0 4px 0;'><i class='fa fa-info-circle text-danger'></i> 1. 免密查看工资：免密登陆员工查询系统后，查询工资信息必须再次输入密码确认后方能查询。若勾上即无需再输密码也能查询工资信息</p>";
-                content += "<p class='small' style='margin:6px 0 4px 0;'><i class='fa fa-info-circle text-danger'></i> 2. 推送工资信息：勾上即能收到每月工资发放的最新信息。去掉即表示不收取此类信息</p>";
-                content += "<p class='small' style='margin:6px 0 4px 0;'><i class='fa fa-info-circle text-danger'></i> 3. 推送饭卡信息：勾上即能收到饭卡50元以上大额消费通知和每次充值的信息。去掉即表示不收取此类信息</p>";
-                content += "<p class='small' style='margin:6px 0 4px 0;'><i class='fa fa-info-circle text-danger'></i> 4. 推送流程信息：勾上即能收到涉及本人之公司业务流程的申请、待审批和已审批信息。去掉即表示不收取此类信息</p>";
-                content += "<p class='small' style='margin:6px 0 4px 0;'><i class='fa fa-info-circle text-danger'></i> 5. 以上4个参数绑定后还可在【信利员工信息查询系统】个人信息设置界面（点击主页头像）进行修改</p>";
+                var content = "<p style='margin:6px 0 4px 0;'><i class='fa fa-info-circle text-danger'></i> 1. 免密查看工资：免密登陆员工查询系统后，查询工资信息必须再次输入密码确认后方能查询。若勾上即无需再输密码也能查询工资信息</p>";
+                content += "<p style='margin:6px 0 4px 0;'><i class='fa fa-info-circle text-danger'></i> 2. 推送工资信息：勾上即能收到每月工资发放的最新信息。去掉即表示不收取此类信息</p>";
+                content += "<p style='margin:6px 0 4px 0;'><i class='fa fa-info-circle text-danger'></i> 3. 推送饭卡信息：勾上即能收到饭卡50元以上大额消费通知和每次充值的信息。去掉即表示不收取此类信息</p>";
+                content += "<p style='margin:6px 0 4px 0;'><i class='fa fa-info-circle text-danger'></i> 4. 推送流程信息：勾上即能收到涉及本人之公司业务流程的申请、待审批和已审批信息。去掉即表示不收取此类信息</p>";
+                content += "<p style='margin:6px 0 4px 0;'><i class='fa fa-info-circle text-danger'></i> 5. 以上4个参数绑定后还可在【信利员工信息查询系统】个人信息设置界面（点击主页头像）进行修改</p>";
                 openMessageDialog(content, "参数设置帮助");
             });
 
