--- a/EmpInfo/Views/Apply/GetMyAuditingALList.cshtml
+++ b/EmpInfo/Views/Apply/GetMyAuditingALList.cshtml
@@ -14,41 +14,46 @@
 }
 @section Scripts{
     <script>
-        function CheckDetail(sysNo) {
-            window.location.href = "CheckAndAuditDPApply?sysNo=" + sysNo;
+        function BeginAudit(sysNo,step) {
+            window.location.href = "BeginAuditALApply?sysNo=" + sysNo + "&step=" + step;
         }
-        </script>
-    }
+    </script>
+}
 <div class="panel panel-success" id="applyDiv">
     <div class="panel-heading">
         <ol class="breadcrumb" style="margin:0;padding:0; background-color:transparent;">
             <li><span class="glyphicon glyphicon-hand-right"></span></li>
             <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
-            <li><a href="@Url.Content("~/Apply/DormRepairIndex")">宿舍维修申请</a></li>
+            <li><a href="@Url.Content("~/Home/WorkGroupIndex")">智慧办公集合</a></li>
+            <li><a href="@Url.Content("~/Apply/AskLeaveIndex")">请假申请单</a></li>
             <li class="active">我的待办</li>
         </ol>
     </div>
     <div class="panel-body">
-        
+
         @if (list.Count() == 0) {
             <p class="text-center text-warning">暂没有待办记录</p>
         }
         else {
             <h4 class="text-danger"><i>可以查看到最多100条待办记录:</i> </h4>
-            <hr/>
+            <hr />
         }
         <div class="row">
             @foreach (var i in list) {
                 <div class="col-xs-12 col-md-3 col-sm-4">
                     <div class="thumbnail">
-                        <img src="@Url.Content("~/Content/images/repair.png")" alt="repair">                        
+                        <img src="@Url.Content("~/Content/images/repair.png")" alt="repair">
                         <div class="caption">
-                            <h3>@i.sysNo</h3>
+                            <h3>@i.sysNo
+                            @if (i.isUserAobrt) {
+                                <span class="text-danger">(申请撤销)</span>
+                            }
+                            </h3>
                             <p>申请人：@i.applier</p>
                             <p>申请时间：@(((DateTime)i.applyTime).ToString("yyyy-MM-dd HH:mm:ss"))</p>
-                            <p>宿舍号：@i.subTitle</p>
-                            <p>审批节点：@i.stepName</p>                            
-                            <p><button class="btn btn-primary btn-block" onclick="CheckDetail('@i.sysNo')"><i class="fa fa-search"></i> 进入办理</button></p>
+                            <p>请假时间：@i.subTitle</p>
+                            <p>审批节点：@i.stepName</p>
+                            <p><button class="btn btn-primary btn-block" onclick="BeginAudit('@i.sysNo','@i.step')"><i class="fa fa-search"></i> 进入办理</button></p>
                         </div>
                     </div>
                 </div>
