--- a/EmpInfo/Views/Home/Index.cshtml
+++ b/EmpInfo/Views/Home/Index.cshtml
@@ -49,7 +49,7 @@
 @section Scripts {
     <script>
 
-        var checkSalaryNeedPassword = "@checkSalaryNeedPassword";
+    var checkSalaryNeedPassword = "@checkSalaryNeedPassword";
     $(function () {
 
         //每次打开主页先看邮箱是否有绑定
@@ -179,7 +179,7 @@
         });
 
         //K3重置密码
-        $("#K3Img,#K3Bt").click(function () {
+        @*$("#K3Img,#K3Bt").click(function () {
             $.post("@Url.Content("~/Home/ValidateEmail")", {}, function (data) {
                 if (!data.suc) {
                     toastr.error(data.msg);
@@ -193,7 +193,7 @@
                     });
                 }
             });
-        });
+        });*@
 
         //图形报表
         $("#chartBt,#chartImg").click(function () {
@@ -235,6 +235,11 @@
         //宿舍集合
         $("#dormGroupImg,#dormGroupBt").click(function () {
             window.location.href = "@Url.Content("~/Home/DormGroupIndex")";
+        });
+
+        //智慧办公
+        $("#workGroupImg").click(function () {
+            window.location.href = "@Url.Content("~/Home/WorkGroupIndex")";
         });
 
     });
@@ -288,16 +293,14 @@
         </div>
     </div>
     }
-    <div class="col-xs-6 col-sm-4">
+    @*<div class="col-xs-6 col-sm-4">
         <div class="thumbnail">
             <a href="#" id="K3Img"><img src="@Url.Content("~/Content/images/box.png")" alt="k3" ></a>
             <div class="caption">
                 <h3>K3用户</h3>
-                @*<p>可以处理K3用户的重新开通与重置登录密码</p>
-                <p><button class="btn btn-primary btn-block" id="K3Bt">进入处理</button></p>*@
             </div>
         </div>
-    </div>
+    </div>*@
     @if (!auditorComing) {
     <div class="col-xs-6 col-sm-4">
         <div class="thumbnail">
@@ -308,7 +311,15 @@
                 <p><button class="btn btn-primary btn-block" id="dormGroupBt">进入查看</button></p>*@
             </div>
         </div>
-    </div>
+    </div>     
+    <div class="col-xs-6 col-sm-4">
+        <div class="thumbnail">
+            <a href="#" id="workGroupImg"><img src="@Url.Content("~/Content/images/office.png")" alt="house"></a>
+            <div class="caption">
+                <h3>智慧办公</h3>
+            </div>
+        </div>
+    </div>   
     <div class="col-xs-6 col-sm-4">
         <div class="thumbnail">
             <a href="#" id="ResImg"><img src="@Url.Content("~/Content/images/res_256.png")" alt="res" ></a>
