--- a/EmpInfo/Views/Shared/_ConfirmDialog.cshtml
+++ b/EmpInfo/Views/Shared/_ConfirmDialog.cshtml
@@ -7,14 +7,14 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="confirmModalLabel"><i class="fa fa-question-circle"></i> 操作确认</h4>
+                <h4 class="modal-title" id="confirmModalLabel"><i class="fa fa-question-circle"></i> <span id="cf_text_title">操作确认</span></h4>
             </div>
             <div class="modal-body">
                 <p id="confirm_content" class="text-danger"></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-mail-reply"></i> 取消</button>
-                <button id="bt_confirm" type="button" class="btn btn-success"><i class="fa fa-check"></i> 确定</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-mail-reply"></i> <span id="cf_text_cancel">取消</span></button>
+                <button id="cf_bt_confirm" type="button" class="btn btn-success"><i class="fa fa-check"></i> <span id="cf_text_confirm">确定</span></button>
             </div>
         </div>
     </div>
@@ -22,12 +22,20 @@
 
 <script>
     //打开确认对话框，content是提示内容，callback是点击确认之后的回调方法
-    function openConfirmDialog(content, callback) {
-        $("#confirmModal").modal("show");
-        $("#confirm_content").html(content);
-        $("#bt_confirm").off("click").on("click",function () {
-            $("#confirmModal").modal("hide");
-            callback();
-        });
+    var cfcb;
+    function openConfirmDialog(content, callback, title, cancelText, confirmText) {
+        $("#cf_text_title").html(title ? title : "操作确认");
+        $("#cf_text_cancel").html(cancelText ? cancelText : "取消");
+        $("#cf_text_confirm").html(confirmText ? confirmText : "确定");
+        
+        $("#confirmModal").modal("show");        
+        $("#confirm_content").html(content);        
+        cfcb = callback;
     }
+    $(function () {
+        $("#cf_bt_confirm").on("click", function () {
+            $("#confirmModal").modal("hide");
+            cfcb();
+        });
+    });
 </script>
